--- a/community/index.html
+++ b/community/index.html
@@ -35,12 +35,12 @@
 <meta name="dc.language" content="en, zh-Hans, cmn">
 <!-- RDFa Metadata (in OpenGraph) -->
 <meta property="og:title" content="Community" />
-<meta property="og:author" content="http://i2000s.github.io/index.html" />  <!-- Should be Liquid? URI? -->
+<meta property="og:author" content="https://www.qixiaodong.tk/index.html" />  <!-- Should be Liquid? URI? -->
 <meta property="http://ogp.me/ns/profile#first_name" content="Xiaodong"/>
 <meta property="http://ogp.me/ns/profile#last_name" content="Qi"/>
 <meta property="http://ogp.me/ns/article#published_time" content="" />
 <meta property="og:site_name" content="The NoteBlog of Xiaodong Qi" /> <!-- Same as dc:source? -->
-<meta property="og:url" content="http://i2000s.github.io/community/" />
+<meta property="og:url" content="https://www.qixiaodong.tk/community/" />
 <meta property="og:type" content="website" />
 <!-- Google Scholar Metadata -->
 <meta name="citation_author" content="Xiaodong Qi"/>
@@ -306,7 +306,7 @@
       <!-- Search site using Google's index -->
         <form class="navbar-form navbar-right" role="search" method="get" action="http://google.com/search">
           <div class="form-group">
-            <input type="hidden" name="q" value="site:http://i2000s.github.io" />
+            <input type="hidden" name="q" value="site:https://www.qixiaodong.tk" />
             <input type="text" class="form-control search-query" name="q" placeholder="Search this site"/>
           </div>
           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
@@ -390,10 +390,10 @@
   <div class="row">
     <div class="col-md-6 col-xs-11">
      <h4> <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;" >
-      <img src="http://i2000s.github.io/assets/img/icon-github.png" alt="github"> Coding </a></h4>
+      <img src="https://www.qixiaodong.tk/assets/img/icon-github.png" alt="github"> Coding </a></h4>
        <div class="excerpt" height="300px">
            <div class="scroll">
-                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Details on submodule part.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/bc0d2a6c48...d22add5d01">05:10 2016/10/04</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to bc0d2a6c4868adc0c96671e91f146daaef77846b.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/da7660d7eb...33fd33e587">07:28 2016/09/30</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Doc drafts.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/9f6fa0fbb9...bc0d2a6c48">07:23 2016/09/30</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 9f6fa0fbb982e42667214833da4be1258005a2a1.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/6f46bbfe25...da7660d7eb">11:58 2016/09/29</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Add Jongmin to the link.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/a030719859...9f6fa0fbb9">11:53 2016/09/29</a></li></ul>
+                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Add SSL certified domain name. More notes on using git for paper writing with collaborators.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/d22add5d01...4ddc38fb0a">06:24 2016/11/07</a></li><li>i2000s starred cgogolin/quantum-journal: <em></em> <a href="https://github.com/cgogolin/quantum-journal">05:19 2016/10/04</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to d22add5d0198157abe414ea78fe4114d05784f7d.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/33fd33e587...85a8348b37">05:15 2016/10/04</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Details on submodule part.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/bc0d2a6c48...d22add5d01">05:10 2016/10/04</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to bc0d2a6c4868adc0c96671e91f146daaef77846b.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/da7660d7eb...33fd33e587">07:28 2016/09/30</a></li></ul>
            </div>
        </div>
     </div>
@@ -402,12 +402,12 @@
         <h4><a property="account" href="https://twitter.com/i2000s" onclick="recordOutboundLink(this, 'Outbound Links', 'Twitter'); return false;"><img src="/assets/img/icon-twitter.png" height=45px alt="Twitter"> Discussing </a></h4>
         <div class="excerpt" height="300px">
             <div class="scroll">
-                <ul><li><p>@ubuntu @ubuntutouch @UbuntuTouchOS This is the result: <a href="https://t.co/c6Ml0HiGdz">https://t.co/c6Ml0HiGdz</a></p>
+                <ul><li><p>RT @csferrie: Check out our statistical inference software at <a href="https://t.co/OdBwH0PTjB">https://t.co/OdBwH0PTjB</a> and the companion paper at <a href="https://t.co/ywJhmAD3Bd">https://t.co/ywJhmAD3Bd</a> ht…</p>
+ <a href="http://twitter.com/i2000s/statuses/787091725781041153">12:44 2016/10/15</a> </li><li><h1>CavesFest Guess who is here <a href="https://t.co/fq6eg1EHDW">https://t.co/fq6eg1EHDW</a></h1>
+ <a href="http://twitter.com/i2000s/statuses/786948057199841280">03:13 2016/10/14</a> </li><li><p>I liked a @YouTube video <a href="https://t.co/UxBsZTJPMh">https://t.co/UxBsZTJPMh</a> 张涵予 彭于晏《湄公河行动》2016 HD1280清晰中字首发</p>
+ <a href="http://twitter.com/i2000s/statuses/783618228354420736">10:41 2016/10/05</a> </li><li><p>@ubuntu @ubuntutouch @UbuntuTouchOS This is the result: <a href="https://t.co/c6Ml0HiGdz">https://t.co/c6Ml0HiGdz</a></p>
  <a href="http://twitter.com/i2000s/statuses/781658569749987328">12:55 2016/09/30</a> </li><li><p>Registration for the CavesFest is ending soon: <a href="https://t.co/kOuEcK7q10">https://t.co/kOuEcK7q10</a> Featured speaker Kip Thorne may get the Nobel Prize one week before..</p>
- <a href="http://twitter.com/i2000s/statuses/781644527224238080">11:59 2016/09/29</a> </li><li><p><a href="https://t.co/Dvoyj0RImE">https://t.co/Dvoyj0RImE</a> CQuIC is hiring 4-5 theory Postdocs!</p>
- <a href="http://twitter.com/i2000s/statuses/775690251297849345">01:39 2016/09/13</a> </li><li><p>It will end soon! <a href="https://t.co/K3jvCXKXTL">https://t.co/K3jvCXKXTL</a></p>
- <a href="http://twitter.com/i2000s/statuses/775068888597868544">08:29 2016/09/11</a> </li><li><p>PandA Event: <a href="https://t.co/T22KPXkcDc">https://t.co/T22KPXkcDc</a> via @UNMpanda</p>
- <a href="http://twitter.com/i2000s/statuses/773992855186513920">09:14 2016/09/08</a> </li></ul>
+ <a href="http://twitter.com/i2000s/statuses/781644527224238080">11:59 2016/09/29</a> </li></ul>
             </div>
         </div>
      </div>
@@ -470,7 +470,7 @@
       &amp;rft.date=
       &amp;rft.language='en-US, zh-Hans'
       &amp;rft.rights='CC-BY'
-      &amp;rft_id=http://i2000s.github.io/community/">
+      &amp;rft_id=https://www.qixiaodong.tk/community/">
   </span>
 
     </footer>
@@ -529,19 +529,19 @@
     <!-- Twitter Bootstrap Javascript -->
     <script src="/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
     <!-- Unused Twitter Bootstrap Javascript
-    <script src="http://i2000s.github.io/assets/js/bootstrap-dropdown.js"></script>
-    <script src="http://i2000s.github.io/assets/js/google-code-prettify/prettify.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-transition.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-alert.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-modal.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-tab.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-tooltip.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-popover.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-button.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-carousel.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-typeahead.js"></script>
-    <script src="http://i2000s.github.io/assets/js/application.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-dropdown.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/google-code-prettify/prettify.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-transition.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-alert.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-modal.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-scrollspy.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tab.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tooltip.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-popover.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-button.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-carousel.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-typeahead.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/application.js"></script>
     -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!--<script src = "https://code.jquery.com/jquery.js"></script>-->
