--- a/tags.html
+++ b/tags.html
@@ -41,12 +41,12 @@
 <meta name="dc.language" content="en, zh-Hans, cmn">
 <!-- RDFa Metadata (in OpenGraph) -->
 <meta property="og:title" content="Tags" />
-<meta property="og:author" content="http://i2000s.github.io/index.html" />  <!-- Should be Liquid? URI? -->
+<meta property="og:author" content="https://www.qixiaodong.tk/index.html" />  <!-- Should be Liquid? URI? -->
 <meta property="http://ogp.me/ns/profile#first_name" content="Xiaodong"/>
 <meta property="http://ogp.me/ns/profile#last_name" content="Qi"/>
 <meta property="http://ogp.me/ns/article#published_time" content="" />
 <meta property="og:site_name" content="The NoteBlog of Xiaodong Qi" /> <!-- Same as dc:source? -->
-<meta property="og:url" content="http://i2000s.github.io/tags" />
+<meta property="og:url" content="https://www.qixiaodong.tk/tags" />
 <meta property="og:type" content="website" />
 <!-- Google Scholar Metadata -->
 <meta name="citation_author" content="Xiaodong Qi"/>
@@ -170,7 +170,7 @@ var _hmt = _hmt || [];
       <!-- Search site using Google's index -->
         <form class="navbar-form navbar-right" role="search" method="get" action="http://google.com/search">
           <div class="form-group">
-            <input type="hidden" name="q" value="site:http://i2000s.github.io" />
+            <input type="hidden" name="q" value="site:https://www.qixiaodong.tk" />
             <input type="text" class="form-control search-query" name="q" placeholder="Search this site"/>
           </div>
           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
@@ -2209,70 +2209,70 @@ var _hmt = _hmt || [];
         -->
           <div class='cloud'>
             <h1> Tag Cloud</h1>
-            <a style='font-size: 70%' href='/tags.html#bibliographic-reference-management'>bibliographic-reference-management</a>
-<a style='font-size: 70%' href='/tags.html#heterogeneous-media'>heterogeneous-media</a>
-<a style='font-size: 170%' href='/tags.html#python'>python</a>
-<a style='font-size: 70%' href='/tags.html#memory'>memory</a>
-<a style='font-size: 118%' href='/tags.html#ipython'>ipython</a>
-<a style='font-size: 100%' href='/tags.html#matlab'>matlab</a>
-<a style='font-size: 70%' href='/tags.html#research'>research</a>
-<a style='font-size: 70%' href='/tags.html#summer study'>summer study</a>
-<a style='font-size: 70%' href='/tags.html#petsc'>petsc</a>
-<a style='font-size: 70%' href='/tags.html#programming'>programming</a>
-<a style='font-size: 70%' href='/tags.html#shocks'>shocks</a>
-<a style='font-size: 70%' href='/tags.html#HTML'>HTML</a>
-<a style='font-size: 70%' href='/tags.html#Jupyter'>Jupyter</a>
-<a style='font-size: 100%' href='/tags.html#pyclaw'>pyclaw</a>
-<a style='font-size: 70%' href='/tags.html#knitr'>knitr</a>
-<a style='font-size: 130%' href='/tags.html#open-access'>open-access</a>
-<a style='font-size: 100%' href='/tags.html#CFL-condition'>CFL-condition</a>
-<a style='font-size: 70%' href='/tags.html#quantum optics'>quantum optics</a>
-<a style='font-size: 70%' href='/tags.html#roundoff'>roundoff</a>
+            <a style='font-size: 70%' href='/tags.html#academia'>academia</a>
+<a style='font-size: 100%' href='/tags.html#software-distribution'>software-distribution</a>
 <a style='font-size: 70%' href='/tags.html#Julia'>Julia</a>
+<a style='font-size: 70%' href='/tags.html#RK-Opt'>RK-Opt</a>
+<a style='font-size: 70%' href='/tags.html#sagemathcloud'>sagemathcloud</a>
+<a style='font-size: 70%' href='/tags.html#research'>research</a>
+<a style='font-size: 140%' href='/tags.html#testing'>testing</a>
+<a style='font-size: 100%' href='/tags.html#science'>science</a>
 <a style='font-size: 100%' href='/tags.html#stability'>stability</a>
+<a style='font-size: 70%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
 <a style='font-size: 70%' href='/tags.html#poster'>poster</a>
 <a style='font-size: 118%' href='/tags.html#version-control'>version-control</a>
-<a style='font-size: 130%' href='/tags.html#publications'>publications</a>
 <a style='font-size: 70%' href='/tags.html#paper-review'>paper-review</a>
-<a style='font-size: 70%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
-<a style='font-size: 100%' href='/tags.html#conference'>conference</a>
-<a style='font-size: 70%' href='/tags.html#mendeley'>mendeley</a>
-<a style='font-size: 100%' href='/tags.html#arXiv'>arXiv</a>
-<a style='font-size: 118%' href='/tags.html#Runge-Kutta-methods'>Runge-Kutta-methods</a>
-<a style='font-size: 70%' href='/tags.html#automation'>automation</a>
-<a style='font-size: 70%' href='/tags.html#RK-Opt'>RK-Opt</a>
-<a style='font-size: 118%' href='/tags.html#mathematical-exposition'>mathematical-exposition</a>
-<a style='font-size: 70%' href='/tags.html#Jekyll'>Jekyll</a>
 <a style='font-size: 70%' href='/tags.html#collaboration'>collaboration</a>
-<a style='font-size: 70%' href='/tags.html#linux'>linux</a>
-<a style='font-size: 100%' href='/tags.html#software-distribution'>software-distribution</a>
-<a style='font-size: 130%' href='/tags.html#documentation'>documentation</a>
-<a style='font-size: 130%' href='/tags.html#reproducibility'>reproducibility</a>
-<a style='font-size: 70%' href='/tags.html#CSS'>CSS</a>
-<a style='font-size: 70%' href='/tags.html#SSP'>SSP</a>
-<a style='font-size: 100%' href='/tags.html#science'>science</a>
-<a style='font-size: 70%' href='/tags.html#profiling'>profiling</a>
-<a style='font-size: 118%' href='/tags.html#teaching'>teaching</a>
-<a style='font-size: 70%' href='/tags.html#nanofiber'>nanofiber</a>
-<a style='font-size: 70%' href='/tags.html#scientific-reading'>scientific-reading</a>
-<a style='font-size: 100%' href='/tags.html#advection'>advection</a>
-<a style='font-size: 70%' href='/tags.html#sagemathcloud'>sagemathcloud</a>
-<a style='font-size: 70%' href='/tags.html#blog-post'>blog-post</a>
-<a style='font-size: 130%' href='/tags.html#numerical-analysis'>numerical-analysis</a>
-<a style='font-size: 155%' href='/tags.html#open-science'>open-science</a>
-<a style='font-size: 70%' href='/tags.html#scientific-computing'>scientific-computing</a>
-<a style='font-size: 100%' href='/tags.html#wave-equation'>wave-equation</a>
-<a style='font-size: 100%' href='/tags.html#presentation'>presentation</a>
-<a style='font-size: 100%' href='/tags.html#PDE'>PDE</a>
-<a style='font-size: 70%' href='/tags.html#academia'>academia</a>
-<a style='font-size: 140%' href='/tags.html#testing'>testing</a>
-<a style='font-size: 70%' href='/tags.html#matplotlib'>matplotlib</a>
-<a style='font-size: 118%' href='/tags.html#reproducible-research'>reproducible-research</a>
-<a style='font-size: 130%' href='/tags.html#hyperbolic-PDEs'>hyperbolic-PDEs</a>
-<a style='font-size: 130%' href='/tags.html#scientific-publishing'>scientific-publishing</a>
-<a style='font-size: 100%' href='/tags.html#git'>git</a>
-<a style='font-size: 70%' href='/tags.html#software'>software</a>
 <a style='font-size: 70%' href='/tags.html#stackexchange'>stackexchange</a>
+<a style='font-size: 100%' href='/tags.html#presentation'>presentation</a>
+<a style='font-size: 70%' href='/tags.html#profiling'>profiling</a>
+<a style='font-size: 70%' href='/tags.html#SSP'>SSP</a>
+<a style='font-size: 100%' href='/tags.html#conference'>conference</a>
+<a style='font-size: 130%' href='/tags.html#scientific-publishing'>scientific-publishing</a>
+<a style='font-size: 70%' href='/tags.html#programming'>programming</a>
+<a style='font-size: 100%' href='/tags.html#arXiv'>arXiv</a>
+<a style='font-size: 70%' href='/tags.html#roundoff'>roundoff</a>
+<a style='font-size: 100%' href='/tags.html#advection'>advection</a>
+<a style='font-size: 130%' href='/tags.html#hyperbolic-PDEs'>hyperbolic-PDEs</a>
+<a style='font-size: 100%' href='/tags.html#pyclaw'>pyclaw</a>
+<a style='font-size: 70%' href='/tags.html#knitr'>knitr</a>
+<a style='font-size: 70%' href='/tags.html#CSS'>CSS</a>
+<a style='font-size: 118%' href='/tags.html#Runge-Kutta-methods'>Runge-Kutta-methods</a>
+<a style='font-size: 70%' href='/tags.html#software'>software</a>
+<a style='font-size: 118%' href='/tags.html#reproducible-research'>reproducible-research</a>
+<a style='font-size: 70%' href='/tags.html#shocks'>shocks</a>
+<a style='font-size: 70%' href='/tags.html#linux'>linux</a>
+<a style='font-size: 130%' href='/tags.html#documentation'>documentation</a>
+<a style='font-size: 130%' href='/tags.html#numerical-analysis'>numerical-analysis</a>
+<a style='font-size: 100%' href='/tags.html#CFL-condition'>CFL-condition</a>
+<a style='font-size: 70%' href='/tags.html#heterogeneous-media'>heterogeneous-media</a>
+<a style='font-size: 70%' href='/tags.html#mendeley'>mendeley</a>
+<a style='font-size: 130%' href='/tags.html#reproducibility'>reproducibility</a>
+<a style='font-size: 70%' href='/tags.html#Jekyll'>Jekyll</a>
+<a style='font-size: 118%' href='/tags.html#teaching'>teaching</a>
+<a style='font-size: 118%' href='/tags.html#mathematical-exposition'>mathematical-exposition</a>
+<a style='font-size: 70%' href='/tags.html#automation'>automation</a>
+<a style='font-size: 70%' href='/tags.html#blog-post'>blog-post</a>
+<a style='font-size: 130%' href='/tags.html#publications'>publications</a>
+<a style='font-size: 70%' href='/tags.html#nanofiber'>nanofiber</a>
+<a style='font-size: 155%' href='/tags.html#open-science'>open-science</a>
+<a style='font-size: 100%' href='/tags.html#git'>git</a>
+<a style='font-size: 130%' href='/tags.html#open-access'>open-access</a>
+<a style='font-size: 70%' href='/tags.html#matplotlib'>matplotlib</a>
+<a style='font-size: 170%' href='/tags.html#python'>python</a>
+<a style='font-size: 70%' href='/tags.html#Jupyter'>Jupyter</a>
+<a style='font-size: 100%' href='/tags.html#wave-equation'>wave-equation</a>
+<a style='font-size: 70%' href='/tags.html#scientific-reading'>scientific-reading</a>
+<a style='font-size: 70%' href='/tags.html#quantum optics'>quantum optics</a>
+<a style='font-size: 70%' href='/tags.html#bibliographic-reference-management'>bibliographic-reference-management</a>
+<a style='font-size: 100%' href='/tags.html#matlab'>matlab</a>
+<a style='font-size: 70%' href='/tags.html#memory'>memory</a>
+<a style='font-size: 70%' href='/tags.html#summer study'>summer study</a>
+<a style='font-size: 70%' href='/tags.html#petsc'>petsc</a>
+<a style='font-size: 118%' href='/tags.html#ipython'>ipython</a>
+<a style='font-size: 70%' href='/tags.html#scientific-computing'>scientific-computing</a>
+<a style='font-size: 70%' href='/tags.html#HTML'>HTML</a>
+<a style='font-size: 100%' href='/tags.html#PDE'>PDE</a>
 
           </div>
 
@@ -2335,7 +2335,7 @@ var _hmt = _hmt || [];
       &amp;rft.date=
       &amp;rft.language='en-US, zh-Hans'
       &amp;rft.rights='CC-BY'
-      &amp;rft_id=http://i2000s.github.io/tags">
+      &amp;rft_id=https://www.qixiaodong.tk/tags">
   </span>
 
     </footer>
@@ -2394,19 +2394,19 @@ var _hmt = _hmt || [];
     <!-- Twitter Bootstrap Javascript -->
     <script src="/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
     <!-- Unused Twitter Bootstrap Javascript
-    <script src="http://i2000s.github.io/assets/js/bootstrap-dropdown.js"></script>
-    <script src="http://i2000s.github.io/assets/js/google-code-prettify/prettify.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-transition.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-alert.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-modal.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-tab.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-tooltip.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-popover.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-button.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-carousel.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-typeahead.js"></script>
-    <script src="http://i2000s.github.io/assets/js/application.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-dropdown.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/google-code-prettify/prettify.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-transition.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-alert.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-modal.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-scrollspy.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tab.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tooltip.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-popover.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-button.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-carousel.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-typeahead.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/application.js"></script>
     -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!--<script src = "https://code.jquery.com/jquery.js"></script>-->
