--- a/tools.html
+++ b/tools.html
@@ -41,12 +41,12 @@
 <meta name="dc.language" content="en, zh-Hans, cmn">
 <!-- RDFa Metadata (in OpenGraph) -->
 <meta property="og:title" content="Tools" />
-<meta property="og:author" content="http://i2000s.github.io/index.html" />  <!-- Should be Liquid? URI? -->
+<meta property="og:author" content="https://www.qixiaodong.tk/index.html" />  <!-- Should be Liquid? URI? -->
 <meta property="http://ogp.me/ns/profile#first_name" content="Xiaodong"/>
 <meta property="http://ogp.me/ns/profile#last_name" content="Qi"/>
 <meta property="http://ogp.me/ns/article#published_time" content="" />
 <meta property="og:site_name" content="The NoteBlog of Xiaodong Qi" /> <!-- Same as dc:source? -->
-<meta property="og:url" content="http://i2000s.github.io/tools" />
+<meta property="og:url" content="https://www.qixiaodong.tk/tools" />
 <meta property="og:type" content="website" />
 <!-- Google Scholar Metadata -->
 <meta name="citation_author" content="Xiaodong Qi"/>
@@ -170,7 +170,7 @@ var _hmt = _hmt || [];
       <!-- Search site using Google's index -->
         <form class="navbar-form navbar-right" role="search" method="get" action="http://google.com/search">
           <div class="form-group">
-            <input type="hidden" name="q" value="site:http://i2000s.github.io" />
+            <input type="hidden" name="q" value="site:https://www.qixiaodong.tk" />
             <input type="text" class="form-control search-query" name="q" placeholder="Search this site"/>
           </div>
           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
@@ -283,7 +283,7 @@ var _hmt = _hmt || [];
       &amp;rft.date=
       &amp;rft.language='en-US, zh-Hans'
       &amp;rft.rights='CC-BY'
-      &amp;rft_id=http://i2000s.github.io/tools">
+      &amp;rft_id=https://www.qixiaodong.tk/tools">
   </span>
 
     </footer>
@@ -342,19 +342,19 @@ var _hmt = _hmt || [];
     <!-- Twitter Bootstrap Javascript -->
     <script src="/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
     <!-- Unused Twitter Bootstrap Javascript
-    <script src="http://i2000s.github.io/assets/js/bootstrap-dropdown.js"></script>
-    <script src="http://i2000s.github.io/assets/js/google-code-prettify/prettify.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-transition.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-alert.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-modal.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-tab.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-tooltip.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-popover.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-button.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-carousel.js"></script>
-    <script src="http://i2000s.github.io/assets/js/bootstrap-typeahead.js"></script>
-    <script src="http://i2000s.github.io/assets/js/application.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-dropdown.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/google-code-prettify/prettify.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-transition.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-alert.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-modal.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-scrollspy.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tab.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tooltip.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-popover.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-button.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-carousel.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-typeahead.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/application.js"></script>
     -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!--<script src = "https://code.jquery.com/jquery.js"></script>-->
